# simplestbrowser

./: .gitignore  Cargo.toml  README.md
data/: resources.gresource  resources.xml  window.ui  window.ui~
src/: main.rs
